# rust_scratchpad

./: .gitignore  Cargo.toml  README.md  foo.txt
satellite/: Cargo.toml
satellite/src/: main.rs  proxy.rs  satellite.rs  satsim.rs  sm2.rs  sm3.rs  state_machine.rs
satellite/src/satellite/: altitude.rs  attitude.rs  laser.rs  power.rs
satellite/src/satsim/: batsim.rs
src/: ascii_art.rs  async_await.rs  async_await2.rs  async_stream.rs  bayes.rs  channels.rs  corpus.rs  cyoa.rs  docs.rs  domain_info_crate.rs  ecs.rs  grep.rs  hashing.rs  headless_screenshot.rs  interior_mutability.rs  iterator_impl_1.rs  iterator_impl_2.rs  json_macro.rs  linked_list.rs  ll2.rs  ll_tx_log.rs  macros.rs  main.rs  markov_chain.rs  markov_chain1.rs  markov_chain2.rs  markov_chain3.rs  markov_chain4.rs  mutex.rs  random.rs  rc2.rs  rc_arc.rs  robot.rs  robot_and_loc.rs  robot_at.rs  satellite.rs  scans2.rs  scans3.rs  scans4_.rs  scratch.rs  (+7 more)
src/docs_/: main.rs
src/markov_chain/: bigram_markov_chain.rs  mc_iter.rs  mod.rs  util.rs
src/markov_chain/examples/: bigram_markov_chain_example.rs  coin_bets.rs  mod.rs
src/rust_book/: boxes.rs
src/scans4/: mod.rs  result.rs
