[package]
name = "scratch"
version = "0.1.0"
authors = ["Garrett Hunyadi <garrett.hunyadi@endurance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.7.0"
crc = "^1.0.0"
specs = "0.14.0"
specs-derive = "0.4.0"
