[package]
name = "scratch"
version = "0.1.0"
authors = ["Garrett Hunyadi <garrett@happify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
itertools = "0.9"
notify = "4.0.12"
rand = "0.7.3"              # Random number generators and other randomness functionality. 